syntax = "proto3";
package app.sinope.grpc_api.v1.service;
option go_package = "github.com/elizabeth-dev/Sinope-Core/pkg/api";

import "post.model.proto";
import "timeline.model.proto";

service TimelineService {
	rpc GetTimeline(app.sinope.grpc_api.v1.model.GetTimelineReq) returns (stream app.sinope.grpc_api.v1.model.Post) {}
}
